Closed Bug 1034582 Opened 10 years ago Closed 10 years ago

Failed to build B2G desktop with MOZ_B2G_RIL enabled, -Werror,-Wdelete-non-virtual-dtor

Categories

(Firefox OS Graveyard :: RIL, defect)

x86_64
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: vicamo, Assigned: vicamo)

Details

Attachments

(1 file)

      No description provided.
Attached patch patchSplinter Review
Attachment #8450950 - Flags: review?(khuey)
(In reply to Vicamo Yang [:vicamo][:vyang] from comment #1)
> Created attachment 8450950 [details] [diff] [review]

This patch suppresses -Wdelete-non-virtual-dtor by adding MOZ_FINAL on these listener classes.
https://hg.mozilla.org/mozilla-central/rev/323c8a4cb90e
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: