Bug 1034582: add MOZ_FINAL to suppress -Wdelete-non-virtual-dtor when MOZ_B2G_RIL is enabled. r=khuey